# ASC-ODE-Team06

./: .gitignore  CMakeLists.txt  Exercise20.md  README.md  REPORT.md  justfile  main.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: gh-pages.yml
Results/: 4pi_Intervall_1000Steps.txt  4pi_Intervall_500Steps.txt  E18_legendre_ad.txt  E19_results_GL_2_100_steps.txt  E19_results_GL_3_25_steps.txt  E19_results_Radau_2_100_steps.txt  E19_results_Radau_3_100_steps.txt
demos/: demo_autodiff.cpp  plotmassspring.py  test_ode.cpp
docs/: _config.yml  _toc.yml  intro.md  myst.yml
docs/chapters/: exercise17.md  exercise18.md  exercise19.md  exercise20.md
mechsystem/: CMakeLists.txt  Newmark.hpp  bind_mass_spring.cpp  mass_spring.cpp  mass_spring.hpp  mass_spring.ipynb  test_mass_spring.py
results_bak/exercise17/data/: 8pi_Intervall_1000Steps.txt  E17_CircuitCrankNicolson_steps_100.txt  (+6 more)
src/: Exercise_18.4_legendre.cpp  Legendre_Poly_plot.py  Newton.hpp  autodiff.hpp  exercise17_circuit.cpp  exercise17_massspring.cpp  exercise18_legendre.cpp  exercise18_pendulum.cpp  exercise19_runge_kutta.cpp  exercise20_chain.cpp  exercise20_crane.cpp  exercise20_double_pendulum.cpp  exercise20_spinning_top.cpp  exercise_18.5_pendulum.cpp  implicitRK.hpp  nonlinfunc.hpp  pendulum_ad.hpp  timestepper.hpp
src/plot/: exercise17_plot.py  exercise18_plot.py  exercise19_plot.py  exercise20_plot_chain_results.py  exercise20_plot_crane_results.py  exercise20_plot_double_pendulum_results.py  exercise20_plot_spinning_top_results.py  main.py
(+13 files in other folders)
